--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,23 @@
 language: python
-arch:
-  - amd64
-  - arm64
 cache: pip
-env: OMP_NUM_THREADS=4
+env: OMP_NUM_THREADS=2
+jobs:
+  include:
+    - name: "Linux"
+      arch:
+        - amd64
+        - arm64
+    - name: "macOS"
+      os: osx
+      osx_image: xcode11.2
+      language: shell
+    - name: "Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python
+        - python -m pip install -U pip
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 install:
   - pip install -U pip
   - pip install -Ur requirements.txt
