--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ jobs:
         - choco install python
         - python -m pip install -U pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      install:
+        - pip install -Ur requirements.txt
+        - USE_VC=1 python setup.py build_ext -i
 install:
   - pip install -U pip
   - pip install -Ur requirements.txt
