--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
       language: shell
       before_install:
         - choco install python
-        - pip install -U pip
+        - python -m pip install -U pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install:
         - pip install -Ur requirements.txt
