--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ jobs:
         - pip3 install -U pip
         - pip3 install -Ur requirements.txt
         - sudo apt-get update
-        - sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd
+        - sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd clinfo
+        - clinfo
         - USE_GPU=1 python3 setup.py build_ext -i
 install:
   - python3 -V
