--- a/.travis.yml
+++ b/.travis.yml
@@ -31,20 +31,17 @@ jobs:
       arch: amd64
       dist: focal
       install:
-        - python3 -V
-        - pip3 -V
-        - pip3 install -U pip
-        - pip3 install -Ur requirements.txt
         - sudo apt-get update
         - sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd clinfo
         - USE_GPU=1 python3 setup.py build_ext -i
       script:
         - clinfo
-install:
+before_install:
   - python3 -V
   - pip3 -V
   - pip3 install -U pip
   - pip3 install -Ur requirements.txt
+install:
   - python3 setup.py build_ext -i
 script:
   - python3 travis.py
