--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: python -m pip install -U pip
-        run: pip install -Ur requirements.txt
+      - run: pip install -Ur requirements.txt
       - run: python setup.py build_ext -i
       - run: python travis.py
 
