--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -3,7 +3,10 @@ on: [push]
 
 jobs:
   common:
-    runs-on: ubuntu-latest, macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -12,10 +15,12 @@ jobs:
       - run: python travis.py
   windows:
     runs-on: windows-latest
+    env:
+      USE_VC: 1
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
-      - run: USE_VC=1 python setup.py build_ext -i
+      - run: python setup.py build_ext -i
       - run: python travis.py
 
