--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -7,16 +7,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install -Ur requirements.txt
-      - run: python setup.py build_ext -i
-      - run: python travis.py
-  windows:
-    runs-on: windows-latest
-    env:
-      USE_VC: 1
+    include:
+      - os: windows-latest
+        env:
+          USE_VC: 1
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
