--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -6,15 +6,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        include:
-          - os: windows-latest
-            env:
-              USE_VC: 1
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
-      - run: python setup.py build_ext -i
+      - if: runner.os != 'Windows'
+        run: python setup.py build_ext -i
+      - if: runner.os == 'Windows'
+        run: USE_VC=1 python setup.py build_ext -i
       - run: python travis.py
 
