--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
-      - run: python setup.py build_ext -i
-        if: runner.os == 'Windows'
+      - if: runner.os != 'Windows'
+        run: python setup.py build_ext -i
+      - if: runner.os == 'Windows'
+        run: python setup.py build_ext -i
         env:
           USE_VC: 1
       - run: python travis.py
