--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -6,7 +6,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        arch: [amd64]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - arch: aarch64
+            os: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
