--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -7,6 +7,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [amd64]
+        pu: [cpu]
         include:
           - arch: aarch64
             os: ubuntu-latest
