--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -16,15 +16,16 @@ jobs:
             os: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - if: ${{ matrix.arch=='aarch64' }}
         uses: uraimo/run-on-arch-action@v2.1.1
         with:
           arch: aarch64
           distro: ubuntu20.04
           run: |
+            pip install -Ur requirements.txt
             python setup.py build_ext -i
           githubToken: ${{ github.token }}
-      - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
       - if: runner.os != 'Windows'
         run: python setup.py build_ext -i
