--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - if: runner.os != 'Windows' && runner.pu == 'cpu'
         run: python setup.py build_ext -i
       - if: runner.os == 'Windows'
