--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -15,14 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - if: runner.os != 'Windows' && runner.pu == 'cpu'
         run: python setup.py build_ext -i
       - if: runner.os == 'Windows'
         run: python setup.py build_ext -i
         env:
           USE_VC: 1
-      - if: runner.os == 'Linux' && runner.pu == 'gpu'
+      - if: runner.os == 'Linux' && matrix.pu == 'gpu'
         run: |
           sudo apt-get update
           sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd clinfo
