--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install -Ur requirements.txt
-      - if: runner.os != 'Windows' && runner.pu == 'cpu'
+      - if: runner.os != 'Windows' && matrix.pu == 'cpu'
         run: python setup.py build_ext -i
       - if: runner.os == 'Windows'
         run: python setup.py build_ext -i
