--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -40,6 +40,8 @@ jobs:
           arch: aarch64
           distro: ubuntu20.04
           run: |
+            apt-get update
+            apt-get install python3-dev python3-pip
             pip3 install -Ur requirements.txt
             python3 setup.py build_ext -i
             python3 travis.py
