--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -2,35 +2,6 @@ name: nanopy
 on: [push]
 
 jobs:
-  common:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        pu: [cpu]
-        include:
-          - pu: gpu
-            os: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install -Ur requirements.txt
-      - if: runner.os != 'Windows' && matrix.pu == 'cpu'
-        run: python setup.py build_ext -i
-      - if: runner.os == 'Windows'
-        run: python setup.py build_ext -i
-        env:
-          USE_VC: 1
-      - if: runner.os == 'Linux' && matrix.pu == 'gpu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd clinfo
-          python setup.py build_ext -i
-          clinfo
-        env:
-          USE_GPU: 1
-      - if: matrix.pu == 'cpu'
-        run: python travis.py
   aarch64:
     runs-on: ubuntu-latest
     steps:
@@ -39,9 +10,10 @@ jobs:
         with:
           arch: aarch64
           distro: ubuntu20.04
+          install: |
+            apt-get update -q -y
+            apt-get install -q -y g++ python3-dev python3-pip
           run: |
-            apt-get update
-            apt-get install python3-dev python3-pip
             pip3 install -Ur requirements.txt
             python3 setup.py build_ext -i
             python3 travis.py
