--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -22,7 +22,7 @@ jobs:
       - if: runner.os == 'Linux'
         run: |
           sudo apt-get update && sudo apt-get install ocl-icd-opencl-dev intel-opencl-icd clinfo
-          python setup.py build_ext -i
+          rm -rf build/ &&  python setup.py build_ext -i
           clinfo
         env:
           USE_GPU: 1
