--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,13 @@
 version: 2
 
-sphinx:
-  configuration: docs/conf.py
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3"
 
 python:
-  version: 3.7
   install:
     - requirements: requirements.txt
+
+sphinx:
+  configuration: docs/conf.py
