--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -32,13 +32,13 @@ jobs:
         env:
           USE_GPU: 1
   aarch64:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: uraimo/run-on-arch-action@v2.2.1
         with:
           arch: aarch64
-          distro: ubuntu20.04
+          distro: ubuntu_latest
           githubToken: ${{ github.token }}
           install: |
             apt-get update -q -y
