--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -8,11 +8,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.x']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
       - run: pip install -Ur requirements.txt
       - name: Build Linux/MacOS
         if: runner.os != 'Windows'
