--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -8,12 +8,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.x']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.x'
       - name: Build Linux/MacOS
         if: runner.os != 'Windows'
         run: python setup.py build_ext -i
