--- a/.github/workflows/nanopy.yml
+++ b/.github/workflows/nanopy.yml
@@ -31,6 +31,7 @@ jobs:
           rm -rf build/
           python setup.py build_ext -i
           clinfo
+          python ghtest-gpu.py
         env:
           USE_GPU: 1
   aarch64:
