--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,2 @@
-include nanopy/blake2b/*
-include nanopy/blake2b/*/*
-include nanopy/ed25519-donna/*
-exclude nanopy/peer.py
+include nanopy/*
+include nanopy/*/*
