--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nanopy"
+description = "Python implementation of NANO currency related functions"
 version = "28.0.1"
 license = "MIT"
 
